--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,16 @@ services:
     build:
       context: .
       dockerfile: dockerfile
+      args:
+        - HTTP_PROXY=${HTTP_PROXY}
+        - HTTPS_PROXY=${HTTPS_PROXY}
     container_name: transformer
     environment:
-      - http_proxy=http://wwwproxy.osakac.ac.jp:8080
-      - https_proxy=http://wwwproxy.osakac.ac.jp:8080
+      - http_proxy=$HTTP_PROXY
+      - https_proxy=$HTTPS_PROXY
       - TZ=Asia/Tokyo
+    env_file:
+      - .env
     volumes:
       - .:/root/src
     working_dir: /root/src
